syntax/reflow.y.output

state 0
	$accept: .start $end 

	tokStartModule  shift 2
	tokStartDecls  shift 3
	tokStartExpr  shift 4
	tokStartType  shift 5
	tokStartPat  shift 6
	.  error

	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  tokStartModule.module tokEOF 
	keyspace: .    (162)

	tokKeyspace  shift 9
	.  reduce 162 (src line 722)

	keyspace  goto 8
	module  goto 7

state 3
	start:  tokStartDecls.defs tokEOF 
	defs: .    (54)

	.  reduce 54 (src line 377)

	defs  goto 10

state 4
	start:  tokStartExpr.expr tokEOF 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 11
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 5
	start:  tokStartType.type tokEOF 

	tokIdent  shift 46
	tokInt  shift 33
	tokString  shift 35
	tokBool  shift 36
	tokFloat  shift 34
	tokFile  shift 37
	tokDir  shift 38
	tokModule  shift 42
	tokFunc  shift 44
	'{'  shift 41
	'('  shift 43
	'['  shift 40
	'#'  shift 48
	.  error

	identSelector  goto 39
	type  goto 32
	variant  goto 47
	variants  goto 45

state 6
	start:  tokStartPat.pat tokEOF 

	tokIdent  shift 50
	'{'  shift 54
	'('  shift 52
	'['  shift 53
	'_'  shift 51
	'#'  shift 55
	.  error

	pat  goto 49

state 7
	start:  tokStartModule module.tokEOF 

	tokEOF  shift 56
	.  error


state 8
	module:  keyspace.params defs 
	params: .    (164)

	.  reduce 164 (src line 727)

	params  goto 57

state 9
	keyspace:  tokKeyspace.tokExpr 

	tokExpr  shift 58
	.  error


state 10
	start:  tokStartDecls defs.tokEOF 
	defs:  defs.def ';' 

	tokIdent  shift 65
	tokAt  shift 63
	tokVal  shift 64
	tokFunc  shift 66
	tokType  shift 67
	tokEOF  shift 59
	.  error

	valdef  goto 61
	typedef  goto 62
	def  goto 60

state 11
	start:  tokStartExpr expr.tokEOF 
	expr:  expr.tokOrOr expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.'<' expr 
	expr:  expr.'>' expr 
	expr:  expr.tokLE expr 
	expr:  expr.tokGE expr 
	expr:  expr.tokNE expr 
	expr:  expr.tokEqEq expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.tokLSH expr 
	expr:  expr.tokRSH expr 
	expr:  expr.tokSquiggleArrow expr 
	expr:  expr.'[' expr ']' 
	expr:  expr.'(' applyargs commaOk ')' 
	expr:  expr.'.' tokIdent 

	'('  shift 87
	'['  shift 86
	tokOrOr  shift 69
	tokAndAnd  shift 70
	tokLE  shift 73
	tokGE  shift 74
	tokNE  shift 75
	tokEqEq  shift 76
	tokLSH  shift 83
	tokRSH  shift 84
	tokSquiggleArrow  shift 85
	'<'  shift 71
	'>'  shift 72
	'+'  shift 77
	'-'  shift 78
	'*'  shift 79
	'/'  shift 80
	'%'  shift 81
	'&'  shift 82
	tokEOF  shift 68
	'.'  shift 88
	.  error


state 12
	expr:  term.    (80)

	.  reduce 80 (src line 506)


state 13
	expr:  tokIf.expr ifelseblock elseifexpr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 89
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 14
	expr:  switchexpr.    (99)

	.  reduce 99 (src line 543)


state 15
	expr:  '!'.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 90
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 16
	expr:  '-'.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 91
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 17
	term:  tokExpr.    (107)

	.  reduce 107 (src line 561)


state 18
	term:  tokIdent.    (108)

	.  reduce 108 (src line 563)


state 19
	term:  tokFile.    (109)

	.  reduce 109 (src line 565)


state 20
	term:  tokDir.    (110)

	.  reduce 110 (src line 567)


state 21
	term:  tokFunc.'(' funcargs ')' tokArrow expr 
	term:  tokFunc.'(' funcargs ')' type tokArrow expr 

	'('  shift 92
	.  error


state 22
	term:  tokExec.'(' commadefs ')' type tokTemplate 

	'('  shift 93
	.  error


state 23
	term:  tokMake.'(' tokExpr ')' 
	term:  tokMake.'(' tokExpr ',' commadefs commaOk ')' 

	'('  shift 94
	.  error


state 24
	term:  '('.expr ',' tupleargs commaOk ')' 
	term:  '('.expr ')' 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 95
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 25
	term:  '{'.structfieldargs commaOk '}' 
	exprblock:  '{'.defs1 expr maybeColon '}' 

	tokIdent  shift 100
	tokAt  shift 63
	tokVal  shift 64
	tokFunc  shift 66
	tokType  shift 67
	.  error

	defs1  goto 97
	valdef  goto 61
	typedef  goto 62
	def  goto 99
	structfieldarg  goto 98
	structfieldargs  goto 96

state 26
	term:  '['.listargs commaOk ']' 
	term:  '['.listargs commaOk listappendargs commaOk ']' 
	term:  '['.':' ']' 
	term:  '['.mapargs commaOk ']' 
	term:  '['.mapargs commaOk listappendargs commaOk ']' 
	term:  '['.expr '|' comprclauses ']' 
	listargs: .    (149)

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	':'  shift 102
	.  reduce 149 (src line 680)

	expr  goto 104
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14
	listargs  goto 101
	mapargs  goto 103

state 27
	term:  '#'.tokIdent 
	term:  '#'.tokIdent '(' expr ')' 

	tokIdent  shift 105
	.  error


state 28
	term:  exprblock.    (127)

	.  reduce 127 (src line 620)


state 29
	term:  tokInt.'(' expr ')' 

	'('  shift 106
	.  error


state 30
	term:  tokFloat.'(' expr ')' 

	'('  shift 107
	.  error


state 31
	switchexpr:  tokSwitch.expr '{' caseclauses '}' 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 108
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 32
	start:  tokStartType type.tokEOF 

	tokEOF  shift 109
	.  error


state 33
	type:  tokInt.    (8)

	.  reduce 8 (src line 178)


state 34
	type:  tokFloat.    (9)

	.  reduce 9 (src line 180)


state 35
	type:  tokString.    (10)

	.  reduce 10 (src line 181)


state 36
	type:  tokBool.    (11)

	.  reduce 11 (src line 182)


state 37
	type:  tokFile.    (12)

	.  reduce 12 (src line 183)


state 38
	type:  tokDir.    (13)

	.  reduce 13 (src line 184)


state 39
	identSelector:  identSelector.'.' tokIdent 
	type:  identSelector.    (14)

	'.'  shift 110
	.  reduce 14 (src line 185)


state 40
	type:  '['.type ']' 
	type:  '['.type ':' type ']' 

	tokIdent  shift 46
	tokInt  shift 33
	tokString  shift 35
	tokBool  shift 36
	tokFloat  shift 34
	tokFile  shift 37
	tokDir  shift 38
	tokModule  shift 42
	tokFunc  shift 44
	'{'  shift 41
	'('  shift 43
	'['  shift 40
	'#'  shift 48
	.  error

	identSelector  goto 39
	type  goto 111
	variant  goto 47
	variants  goto 45

state 41
	type:  '{'.typefields '}' 

	tokIdent  shift 115
	.  error

	typefields  goto 112
	typefield  goto 113
	typefieldidents  goto 114

state 42
	type:  tokModule.'{' typefields '}' 

	'{'  shift 116
	.  error


state 43
	type:  '('.typeargs ')' 

	tokIdent  shift 46
	tokInt  shift 33
	tokString  shift 35
	tokBool  shift 36
	tokFloat  shift 34
	tokFile  shift 37
	tokDir  shift 38
	tokModule  shift 42
	tokFunc  shift 44
	'{'  shift 41
	'('  shift 43
	'['  shift 40
	'#'  shift 48
	.  error

	identSelector  goto 39
	type  goto 120
	typearg  goto 119
	typearglist  goto 118
	typeargs  goto 117
	variant  goto 47
	variants  goto 45

state 44
	type:  tokFunc.'(' typeargs ')' type 

	'('  shift 121
	.  error


state 45
	type:  variants.    (21)
	variants:  variants.'|' variant 

	'|'  shift 122
	.  reduce 21 (src line 207)


state 46
	identSelector:  tokIdent.    (6)

	.  reduce 6 (src line 172)


state 47
	variants:  variant.    (22)

	.  reduce 22 (src line 210)


state 48
	variant:  '#'.tokIdent '(' type ')' 
	variant:  '#'.tokIdent 

	tokIdent  shift 123
	.  error


state 49
	start:  tokStartPat pat.tokEOF 

	tokEOF  shift 124
	.  error


state 50
	pat:  tokIdent.    (36)

	.  reduce 36 (src line 301)


state 51
	pat:  '_'.    (37)

	.  reduce 37 (src line 304)


state 52
	pat:  '('.tuplepatargs ')' 

	tokIdent  shift 50
	'{'  shift 54
	'('  shift 52
	'['  shift 53
	'_'  shift 51
	'#'  shift 55
	.  error

	pat  goto 127
	tuplepatargs  goto 125
	patlist  goto 126

state 53
	pat:  '['.listpatargs ']' 

	tokIdent  shift 50
	'{'  shift 54
	'('  shift 52
	'['  shift 53
	'_'  shift 51
	'#'  shift 55
	.  error

	pat  goto 127
	patlist  goto 129
	listpatargs  goto 128

state 54
	pat:  '{'.structpatargs '}' 

	tokIdent  shift 132
	.  error

	structpat  goto 131
	structpatargs  goto 130

state 55
	pat:  '#'.tokIdent 
	pat:  '#'.tokIdent '(' pat ')' 

	tokIdent  shift 133
	.  error


state 56
	start:  tokStartModule module tokEOF.    (1)

	.  reduce 1 (src line 141)


state 57
	module:  keyspace params.defs 
	params:  params.param ';' 
	defs: .    (54)
	param: .    (166)

	tokParam  shift 136
	';'  reduce 166 (src line 732)
	.  reduce 54 (src line 377)

	defs  goto 134
	param  goto 135

state 58
	keyspace:  tokKeyspace tokExpr.    (163)

	.  reduce 163 (src line 724)


state 59
	start:  tokStartDecls defs tokEOF.    (2)

	.  reduce 2 (src line 147)


state 60
	defs:  defs def.';' 

	';'  shift 137
	.  error


state 61
	def:  valdef.    (65)

	.  reduce 65 (src line 412)


state 62
	def:  typedef.    (66)

	.  reduce 66 (src line 412)


state 63
	valdef:  tokAt.tokRequires '(' commadefs ')' semiOk valdef 

	tokRequires  shift 138
	.  error


state 64
	valdef:  tokVal.val 

	tokIdent  shift 50
	'{'  shift 54
	'('  shift 52
	'['  shift 53
	'_'  shift 51
	'#'  shift 55
	.  error

	val  goto 139
	pat  goto 140

state 65
	valdef:  tokIdent.tokAssign expr 

	tokAssign  shift 141
	.  error


state 66
	valdef:  tokFunc.tokIdent '(' funcargs ')' '=' expr 
	valdef:  tokFunc.tokIdent '(' funcargs ')' type '=' expr 

	tokIdent  shift 142
	.  error


state 67
	typedef:  tokType.tokIdent type 

	tokIdent  shift 143
	.  error


state 68
	start:  tokStartExpr expr tokEOF.    (3)

	.  reduce 3 (src line 152)


state 69
	expr:  expr tokOrOr.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 144
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 70
	expr:  expr tokAndAnd.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 145
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 71
	expr:  expr '<'.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 146
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 72
	expr:  expr '>'.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 147
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 73
	expr:  expr tokLE.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 148
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 74
	expr:  expr tokGE.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 149
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 75
	expr:  expr tokNE.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 150
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 76
	expr:  expr tokEqEq.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 151
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 77
	expr:  expr '+'.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 152
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 78
	expr:  expr '-'.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 153
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 79
	expr:  expr '*'.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 154
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 80
	expr:  expr '/'.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 155
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 81
	expr:  expr '%'.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 156
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 82
	expr:  expr '&'.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 157
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 83
	expr:  expr tokLSH.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 158
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 84
	expr:  expr tokRSH.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 159
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 85
	expr:  expr tokSquiggleArrow.expr 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 160
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 86
	expr:  expr '['.expr ']' 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 161
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 87
	expr:  expr '('.applyargs commaOk ')' 

	tokIdent  shift 18
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokFunc  shift 21
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	expr  goto 163
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14
	applyargs  goto 162

state 88
	expr:  expr '.'.tokIdent 

	tokIdent  shift 164
	.  error


state 89
	expr:  expr.tokOrOr expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.'<' expr 
	expr:  expr.'>' expr 
	expr:  expr.tokLE expr 
	expr:  expr.tokGE expr 
	expr:  expr.tokNE expr 
	expr:  expr.tokEqEq expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.tokLSH expr 
	expr:  expr.tokRSH expr 
	expr:  expr.tokSquiggleArrow expr 
	expr:  tokIf expr.ifelseblock elseifexpr 
	expr:  expr.'[' expr ']' 
	expr:  expr.'(' applyargs commaOk ')' 
	expr:  expr.'.' tokIdent 

	'{'  shift 166
	'('  shift 87
	'['  shift 86
	tokOrOr  shift 69
	tokAndAnd  shift 70
	tokLE  shift 73
	tokGE  shift 74
	tokNE  shift 75
	tokEqEq  shift 76
	tokLSH  shift 83
	tokRSH  shift 84
	tokSquiggleArrow  shift 85
	'<'  shift 71
	'>'  shift 72
	'+'  shift 77
	'-'  shift 78
	'*'  shift 79
	'/'  shift 80
	'%'  shift 81
	'&'  shift 82
	'.'  shift 88
	.  error

	ifelseblock  goto 165

state 90
	expr:  expr.tokOrOr expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.'<' expr 
	expr:  expr.'>' expr 
	expr:  expr.tokLE expr 
	expr:  expr.tokGE expr 
	expr:  expr.tokNE expr 
	expr:  expr.tokEqEq expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.tokLSH expr 
	expr:  expr.tokRSH expr 
	expr:  expr.tokSquiggleArrow expr 
	expr:  expr.'[' expr ']' 
	expr:  expr.'(' applyargs commaOk ')' 
	expr:  expr.'.' tokIdent 
	expr:  '!' expr.    (103)

	'('  shift 87
	'['  shift 86
	'.'  shift 88
	.  reduce 103 (src line 550)


state 91
	expr:  expr.tokOrOr expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.'<' expr 
	expr:  expr.'>' expr 
	expr:  expr.tokLE expr 
	expr:  expr.tokGE expr 
	expr:  expr.tokNE expr 
	expr:  expr.tokEqEq expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.tokLSH expr 
	expr:  expr.tokRSH expr 
	expr:  expr.tokSquiggleArrow expr 
	expr:  expr.'[' expr ']' 
	expr:  expr.'(' applyargs commaOk ')' 
	expr:  expr.'.' tokIdent 
	expr:  '-' expr.    (104)

	'('  shift 87
	'['  shift 86
	'.'  shift 88
	.  reduce 104 (src line 552)


state 92
	term:  tokFunc '('.funcargs ')' tokArrow expr 
	term:  tokFunc '('.funcargs ')' type tokArrow expr 

	tokIdent  shift 115
	.  error

	typefields  goto 168
	typefield  goto 113
	funcargs  goto 167
	typefieldidents  goto 114

state 93
	term:  tokExec '('.commadefs ')' type tokTemplate 
	commadefs: .    (58)

	tokIdent  shift 172
	tokAt  shift 63
	tokVal  shift 64
	tokFunc  shift 66
	tokType  shift 67
	.  reduce 58 (src line 388)

	commadefs  goto 169
	valdef  goto 61
	typedef  goto 62
	def  goto 171
	commadef  goto 170

state 94
	term:  tokMake '('.tokExpr ')' 
	term:  tokMake '('.tokExpr ',' commadefs commaOk ')' 

	tokExpr  shift 173
	.  error


state 95
	expr:  expr.tokOrOr expr 
	expr:  expr.tokAndAnd expr 
	expr:  expr.'<' expr 
	expr:  expr.'>' expr 
	expr:  expr.tokLE expr 
	expr:  expr.tokGE expr 
	expr:  expr.tokNE expr 
	expr:  expr.tokEqEq expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.tokLSH expr 
	expr:  expr.tokRSH expr 
	expr:  expr.tokSquiggleArrow expr 
	expr:  expr.'[' expr ']' 
	expr:  expr.'(' applyargs commaOk ')' 
	expr:  expr.'.' tokIdent 
	term:  '(' expr.',' tupleargs commaOk ')' 
	term:  '(' expr.')' 

	'('  shift 87
	'['  shift 86
	tokOrOr  shift 69
	tokAndAnd  shift 70
	tokLE  shift 73
	tokGE  shift 74
	tokNE  shift 75
	tokEqEq  shift 76
	tokLSH  shift 83
	tokRSH  shift 84
	tokSquiggleArrow  shift 85
	'<'  shift 71
	'>'  shift 72
	'+'  shift 77
	'-'  shift 78
	'*'  shift 79
	'/'  shift 80
	'%'  shift 81
	'&'  shift 82
	'.'  shift 88
	')'  shift 175
	','  shift 174
	.  error


state 96
	term:  '{' structfieldargs.commaOk '}' 
	structfieldargs:  structfieldargs.',' structfieldarg 
	commaOk: .    (169)

	','  shift 177
	.  reduce 169 (src line 746)

	commaOk  goto 176

state 97
	defs1:  defs1.def ';' 
	exprblock:  '{' defs1.expr maybeColon '}' 

	tokIdent  shift 180
	tokExpr  shift 17
	tokInt  shift 29
	tokFloat  shift 30
	tokFile  shift 19
	tokDir  shift 20
	tokExec  shift 22
	tokAt  shift 63
	tokVal  shift 64
	tokFunc  shift 181
	tokIf  shift 13
	tokSwitch  shift 31
	tokMake  shift 23
	tokType  shift 67
	'{'  shift 25
	'('  shift 24
	'['  shift 26
	'-'  shift 16
	'!'  shift 15
	'#'  shift 27
	.  error

	valdef  goto 61
	typedef  goto 62
	def  goto 178
	expr  goto 179
	term  goto 12
	exprblock  goto 28
	switchexpr  goto 14

state 98
	structfieldargs:  structfieldarg.    (145)

	.  reduce 145 (src line 668)


state 99
	defs1:  def.';' 

	';'  shift 182
	.  error


state 100
	valdef:  tokIdent.tokAssign expr 
	structfieldarg:  tokIdent.    (147)
	structfieldarg:  tokIdent.':' expr 

	tokAssign  shift 141
	':'  shift 183
	.  reduce 147 (src line 674)


state 101
	term:  '[' listargs.commaOk ']' 
	term:  '[' listargs.commaOk listappendargs commaOk ']' 
	listargs:  listargs.',' expr 
	commaOk: .    (169)

	','  shift 185
	.  reduce 169 (src line 746)

	commaOk  goto 184
